client-section mobile resp issue solved

--- a/StyleSheets/home-style.css
+++ b/StyleSheets/home-style.css
@@ -482,11 +482,12 @@ main .hero-section .hero-subheading {
 .clients {
   padding-top: 6vw;
   width: 90vw;
+  position: relative;
   margin: auto;
   font-size: 10px;
 }
 .clients-sections {
-  margin-top: 5em;
+  margin-top: 2em;
   width: 90%;
   display: flex;
   align-items: center;
@@ -495,22 +496,14 @@ main .hero-section .hero-subheading {
 .client {
   margin: auto;
   width: 15%;
-  height: 15%;
 }
 .client img {
   width: 100%;
-  height: 100%;
 }
 .client .swiper1 {
   width: 94%;
-  padding: 10px 10px 10px 10px !important;
 }
-/* .client:nth-child(3) { */
-/* width: 10%; */
-/* } */
-/* .client:nth-child(2) { */
-/* width: 19%; */
-/* } */
+
 @media screen and (max-width: 800px) {
   .clients {
     margin-top: 9vw;
@@ -518,7 +511,6 @@ main .hero-section .hero-subheading {
   }
   .client {
     width: 35%;
-    /* height: 10%; */
   }
   .client:nth-child(3) {
     width: 25%;
